add banner with image and bio

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="styles/portfolio.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
         <h3 class="nav-title">AH<span class="text-primary">SA</span>N</h3>
         <ul>
@@ -22,6 +22,19 @@
           <li><button class="btn-primary">Hire Me</button></li>
         </ul>
       </nav>
+      <div class="banner">
+        <img class="profile-pic" src="images/ahsan2.png" alt="">
+        <div class="banner-content">
+          <h3 class="banner-greetings">Hi, I am</h3>
+          <h1 class="banner-title">Syed Ahsan</h1>
+          <p>
+            As a passionate web designer, I thrive on turning visions into reality. My code weaves together aesthetics and functionality, creating seamless digital experiences.
+          </p>
+          <button class="btn-primary">Download CV</button>
+          <button class="btn-primary">Contact</button>
+        </div>
+        
+      </div>
     </header>
     <main></main>
     <footer></footer>
