creat about section

--- a/index.html
+++ b/index.html
@@ -22,21 +22,32 @@
           <li><button class="btn-primary">Hire Me</button></li>
         </ul>
       </nav>
+      <div class="new-ban">
+        <img height="550px" class="developer_img" src="./images/developer.png" alt="" />
       <div class="banner">
-        <img class="profile-pic" src="images/ahsan2.png" alt="">
+        
+
         <div class="banner-content">
           <h3 class="banner-greetings">Hi, I am</h3>
           <h1 class="banner-title">Syed Ahsan</h1>
           <p>
-            As a passionate web designer, I thrive on turning visions into reality. My code weaves together aesthetics and functionality, creating seamless digital experiences.
+            As a passionate web designer, I thrive on turning visions into
+            reality. My code weaves together aesthetics and functionality,
+            creating seamless digital experiences.
           </p>
           <button class="btn-primary">Download CV</button>
           <button class="btn-primary">Contact</button>
         </div>
-        
+        <img height="700px" class="profile-pic" src="images/ahsan2.png" alt="" />
+      </div>
       </div>
     </header>
-    <main></main>
+    <main>
+        <section class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+        </section>
+    </main>
     <footer></footer>
   </body>
 </html>
