--- a/index.html
+++ b/index.html
@@ -210,6 +210,9 @@
             </div>
           </div>
         </div>
+        <div class="download-CV">
+          <button class="btn-primary download-CV">Download CV</button>
+        </div>
       </section>
     </main>
     <footer></footer>
