--- a/index.html
+++ b/index.html
@@ -217,10 +217,10 @@
     </main>
     <footer>
       <div class="footer-column">
-        <h3 class="section-title">
+        <h3 class="footer-title">
           Lets Connect
         </h3>
-        <p class="section-description">
+        <p class="footer-section-description">
           Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
         </p>
         <div class="social-links">
@@ -230,9 +230,15 @@
         </div>
       </div>
       <div class="footer-column">
-        <h3 class="section-title">
+        <h3 class="section-title, footer-title">
           Let’s Message me
         </h3>
+        <form action="" class="contact">
+          <input type="text" name="" id="" placeholder="your name">
+          <input type="email" name="" id="" placeholder="your email">
+          <textarea name="" id="" cols="20" rows="7" placeholder="your message"></textarea>
+          <input class="btn-primary" type="submit" value="Submit">
+        </form>
       </div>
     </footer>
   </body>
