--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/portfolio.css" />
+    <script
+      src="https://kit.fontawesome.com/6622efbeb6.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header class="header">
@@ -38,8 +42,8 @@
               reality. My code weaves together aesthetics and functionality,
               creating seamless digital experiences.
             </p>
-            <button class="btn-primary">Download CV</button>
-            <button class="btn-primary">Contact</button>
+            <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+            <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
           </div>
           <img
             height="700px"
@@ -211,33 +215,36 @@
           </div>
         </div>
         <div class="download-CV">
-          <button class="btn-primary download-CV">Download CV</button>
+          <button class="btn-primary download-CV"> <i class="fa-solid fa-download"></i> Download CV</button>
         </div>
       </section>
     </main>
     <footer>
       <div class="footer-column">
-        <h3 class="footer-title">
-          Lets Connect
-        </h3>
+        <h3 class="footer-title">Lets Connect</h3>
         <p class="footer-section-description">
-          Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+          Please fill out the form on this section to contact with me or call
+          between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
         </p>
         <div class="social-links">
-          <a href=""><img src="./images/icons/facebook.png" alt=""></a>
-          <a href=""><img src="./images/icons/twitter.png" alt=""></a>
-          <a href=""><img src="./images/icons/insta.png" alt=""></a>
+          <a href=""><img src="./images/icons/facebook.png" alt="" /></a>
+          <a href=""><img src="./images/icons/twitter.png" alt="" /></a>
+          <a href=""><img src="./images/icons/insta.png" alt="" /></a>
         </div>
       </div>
       <div class="footer-column">
-        <h3 class="section-title, footer-title">
-          Let’s Message me
-        </h3>
+        <h3 class="section-title, footer-title">Let’s Message me</h3>
         <form action="" class="contact">
-          <input type="text" name="" id="" placeholder="your name">
-          <input type="email" name="" id="" placeholder="your email">
-          <textarea name="" id="" cols="20" rows="7" placeholder="your message"></textarea>
-          <input class="btn-primary" type="submit" value="Submit">
+          <input type="text" name="" id="" placeholder="your name" />
+          <input type="email" name="" id="" placeholder="your email" />
+          <textarea
+            name=""
+            id=""
+            cols="20"
+            rows="7"
+            placeholder="your message"
+          ></textarea>
+          <input class="btn-primary" type="submit" value="Submit" />
         </form>
       </div>
     </footer>
